@startuml
class Salarie {
- prenom : string
- nom : string
}

class Formation {
- nomFormation : string
- nbPlacesDispo : int
- dateDebut : Date
- dateFin : Date
+ inscrireSalarie (salarie : Salarie)
+ noterSalarie (salarie : Salarie, note : int, appreciation : string)

}

class Entreprise {
- nomEntreprise : string
- rueEntreprise : string
- CPEntreprise : int
- villeEntreprise : string
}

class Inscription {
- noteSalarie : int
- appreciation : string
}

Salarie "1..*" --> "1..1" Entreprise : travail
Inscription "0..*" --> "1..1" Salarie
Formation "1..1" --> "0..*" Inscription
@enduml